--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
           <div class="cf-features-section-2-grid-cell">
             <div class="cf-features-section-2-icon-wrap"><img src="images/Ativo-6.webp" loading="lazy" width="35" alt="" class="cf-service-icon"></div>
-            <p class="cf-service-paragraph">Background Checks - 4ks - KYP (know yout partner) - conheça seu parceiro; KYC (know your customer) - conheça seu cliente; KYE (know yout supplier) -conheça seu fornecedor.</p>
+            <p class="cf-service-paragraph">Background Checks - 4ks - KYP (know your partner) - conheça seu parceiro; KYC (know your customer) - conheça seu cliente; KYE (know your supplier) -conheça seu fornecedor.</p>
           </div>
           <div class="cf-features-section-2-grid-cell">
             <div class="cf-features-section-2-icon-wrap"><img src="images/maleta.webp" loading="lazy" width="35" alt="" class="cf-service-icon"></div>
