--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <a href="https://api.whatsapp.com/send?phone=5541996674904" target="_blank" class="w-inline-block"><img src="images/social-media-icon-white-wpp.webp" loading="lazy" width="50" alt="" class="image-2"></a>
             <a href="https://www.instagram.com/gannet.br/" target="_blank" class="w-inline-block"><img src="images/social-media-icon-white.png" loading="lazy" width="50" alt=""></a>
           </div>
-          <div class="preview-copyright"> Rua Luiz França 1296, Curitiba - PR <br>CEP: 82940-090 | CNPJ: 32.978.677.0001-95<br>© 2023 Copyright -  <a href="https://gannet.engaged.com.br/todos" target="_blank" class="link"><strong>Gannet Consultoria e Treinamento</strong></a> | Desenvolvido por <a href="https://www.engaged.com.br/" target="_blank" class="preview-copyright-link"><strong class="bold-text">EngagED</strong></a>
+          <div class="preview-copyright"> Centro Empresarial Glaser - R. Visc. do Rio Branco, 1630, Sala 2006 - Centro, Curitiba - PR <br>CEP: 80420-210 | CNPJ: 32.978.677.0001-95<br>© 2023 Copyright -  <a href="https://gannet.engaged.com.br/todos" target="_blank" class="link"><strong>Gannet Consultoria e Treinamento</strong></a> | Desenvolvido por <a href="https://www.engaged.com.br/" target="_blank" class="preview-copyright-link"><strong class="bold-text">EngagED</strong></a>
           </div>
         </div>
       </div>
